2014-11-30  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.9.4)

	- I had forgotten to uncomment adding the matlab directory, so the
	Matlab files were not being built.

	* CMakeLists.txt: (0.9.3)

	- Fix bug. Add explicit check for OpenGL, because CGAL_ImageIO
	depends on OpenGL to build. Before this fix, if OpenGL was not in
	the system (e.g. libgl1-mesa-dev for Ubuntu), the build would fail
	without a clear message indicating what the problem was.

	* matlab/ManifoldToolbox/tri_sphparam.m: (0.5.0)

	- Change function interface. Remove input argument X, it's
	unnecessary and creates confusion with initial guess Y0. Now first
	argument is the method, then the distance matrix, then the sphere
	radius.

2014-11-28  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* Created DiffusionMRIToolbox

	* Moved fit_DT.m and dt2image.m from CardiacToolbox
	to DiffusionMRIToolbox

	* matlab/DiffusionMRIToolbox/fit_DT.m: (0.1.3)

	- Added extra functionality: diffusion tensor fitting can
	be performed using linear or nonlinear fitting, and using
	positivity constraints or not.

	- Fixed bug where 1D signals crashed

	- Now outputs S0, rather than log(S0)

	* matlab/DiffusionMRIToolbox/DT2image: (0.1.3)

	- minor change to handle S0 rather than log(S0) from fit_DT

	* Add matlab/DiffusionMRIToolbox/fit_stretched_exponential.m

	- FIT_STRETCHED_EXPONENTIAL    Fit the stretched exponential model of 
	diffusion to an image

2014-11-26 Christopher Kelly  <christopher.kelly28@gmail.com>

	* matlab/FiltersToolbox/imblend.m: (0.2.1)

    - Update old syntax to check input/output arguments.

2014-11-25 Irvin Teh <irvin@well.ox.ac.uk>

	* matlab/FiltersToolbox/imagesc_nD.m: (0.1.0)

	- Minor formatting fix to imagesc_nD.m

2014-11-25  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/tri2sphrad.m: (0.1.0)

	- TRI2SPHRAD Estimate radius of sphere with same area as
	triangular mesh.

2014-11-23  Ramon Casero  <rcasero@gmail.com>
